tests/ui/codemap_tests/two_files.stderr
error[E0404]: expected trait, found type alias `Bar`
  --> $DIR/two_files.rs:5:6
   |
LL | impl Bar for Baz { }
   |      ^^^ type aliases cannot be used as traits
   |
help: you might have meant to use `#![feature(trait_alias)]` instead of a `type` alias
  --> $DIR/two_files_data.rs:5:1
   |
LL - type Bar = dyn Foo;
LL + trait Bar = dyn Foo;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0404`.
